Preserve session URL schemes in proxy config maps
* use a scheme-neutral oauth2-proxy redirect URL placeholder
* pass full external session URLs into oauth2-proxy config generation
* normalize trailing slashes without forcing the deployment host
protocol